# binja-luaplugin

./: .gitignore  CMakeLists.txt  LICENSE.txt  LuaScriptingInstance.cpp  LuaScriptingInstance.h  LuaScriptingProvider.cpp  LuaScriptingProvider.h  README.md  generator.cpp  luaplugin.cpp  utils.cpp  utils.h
cmake/: lua_embed.cmake
examples/hello_lua/: default.lua  plugin.json
lua/: LuaLib.cpp  LuaLib.h  LuaState.cpp  LuaState.h
lua51/: default.lua
lua51/binaryninja/: _binaryninjacore.lua  _cdefs.lua  _helpers.lua  default.lua  enterprise.lua  enums.lua  settings.lua
luaembed/: _loadbn.lua  _prompthandler.lua  _tdump.lua  print.lua
